src/objects/CI_Accounting_Treatment__c.object
<CustomObject>
    <fields>
        <fullName>Actuals__c</fullName>
        <label>Actuals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CI_R2R_Budget__c</fullName>
        <label>CI R2R Budget</label>
        <referenceTo>CI_R2R_Budget__c</referenceTo>
        <relationshipLabel>CI_Accounting Treatment</relationshipLabel>
        <relationshipName>CI_Accounting_Treatment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Capex__c</fullName>
        <label>Capex</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P_L__c</fullName>
        <label>P &amp; L</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Paytm__c</fullName>
        <label>Pre Paym</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Capex__c  +  P_L__c  +  Pre_Paytm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CI_Accounting Treatment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CI_R2R_Budget__c</columns>
        <columns>Capex__c</columns>
        <columns>P_L__c</columns>
        <columns>Pre_Paytm__c</columns>
        <columns>Total__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Budget-{000}</displayFormat>
        <label>CI_Accounting Treatment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CI_Accounting Treatment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>